--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Aidan Zhou\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "c:\\Users\\Aidan Zhou\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
